--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "^3.3.0",
-    "semantic-ui-react": "^0.88.2"
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
